# banlieue

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.chainguard  Makefile  README.md  deny.toml
.claude/: CHANGELOG.md  CLAUDE.md  SKILL.md
.claude/rules/: architecture-driven-development.md
.github/actions/extract-version/: action.yml
.github/actions/prepare-docker-binaries/: action.yml
.github/actions/vendor-vim-rs/: action.yml
.github/codeql/: codeql-config.yml
.github/scripts/: calm-args.bats  calm-args.sh
.github/workflows/: build.yaml  calm-test.yaml  calm.yaml  codeql.yaml  docs.yaml  sast.yaml  scorecard.yaml
.vex/: .affected-functions.json  README.md
.wolf/: anatomy.md  buglog.json  cerebrum.md  identity.md  memory.md
.wolf/hooks/: _session.json
crates/banlieue/: Cargo.toml
crates/banlieue-api/: Cargo.toml
crates/banlieue-api/src/: common.rs  common_tests.rs  crddoc.rs  crddoc_tests.rs  crdgen_support.rs  crdgen_support_tests.rs  lib.rs
crates/banlieue-api/src/banlieue/: mod.rs  provider.rs  provider_tests.rs  virtualmachine.rs  virtualmachine_tests.rs  vmclass.rs  vmclass_tests.rs  vmimage.rs  vmimage_tests.rs
crates/banlieue-api/src/infrastructure/: mod.rs  vsphere_cluster.rs  vsphere_cluster_tests.rs  vsphere_machine.rs  vsphere_machine_tests.rs
crates/banlieue-controller/: Cargo.toml
crates/banlieue-controller/src/: app.rs  app_tests.rs  context.rs  error.rs  lib.rs  main.rs
crates/banlieue-controller/src/reconciler/: infra.rs  infra_tests.rs  migration.rs  migration_tests.rs  mod.rs  scheduler.rs  scheduler_tests.rs  status_mirror.rs  status_mirror_tests.rs  virtualmachine.rs  virtualmachine_tests.rs  vsphere_cluster.rs  vsphere_cluster_tests.rs
crates/banlieue-provider-sdk/: Cargo.toml
crates/banlieue-provider-sdk/src/: bootstrap.rs  bootstrap_tests.rs  client.rs  error.rs  finalizer.rs  finalizer_tests.rs  leader.rs  leader_tests.rs  lib.rs  reconciler.rs  reconciler_tests.rs  ssa.rs  status.rs  status_tests.rs
crates/banlieue-provider-vsphere/: Cargo.toml
crates/banlieue-provider-vsphere/src/: app.rs  app_tests.rs  context.rs  error.rs  lib.rs
crates/banlieue-provider-vsphere/src/client/: fake.rs  mod.rs  vim.rs  vim_tests.rs
crates/banlieue-provider-vsphere/src/reconciler/: ca_bundle.rs  ca_bundle_tests.rs  mod.rs  provider.rs  provider_tests.rs  vmimage.rs  vmimage_tests.rs
crates/banlieue-vex/: Cargo.toml
crates/banlieue-vex/src/: auto_vex_presence.rs  auto_vex_presence_tests.rs  auto_vex_reachability.rs  auto_vex_reachability_tests.rs  lib.rs
crates/banlieue/src/: cli.rs  cli_tests.rs  main.rs
deploy/admission/: README.md  provider-cabundle-source.yaml  provider-immutability.yaml  virtualmachine-immutability.yaml
deploy/controller/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
deploy/controller/rbac/: clusterrole.yaml  clusterrolebinding.yaml  serviceaccount.yaml
deploy/crds/: banlieue.io_providers.yaml  banlieue.io_virtualmachines.yaml  banlieue.io_vmclasses.yaml  banlieue.io_vmimages.yaml  infrastructure.banlieue.io_vsphereclusters.yaml  infrastructure.banlieue.io_vspheremachines.yaml  infrastructure.banlieue.io_vspheremachinetemplates.yaml
deploy/kind/: cluster.yaml
deploy/provider-vsphere/: README.md  configmap.yaml  deployment.yaml  service.yaml
deploy/provider-vsphere/rbac/: clusterrole.yaml  clusterrolebinding.yaml  serviceaccount.yaml
docs/: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/adr/: 0001-capi-native-cluster-provisioning.md  0002-infracluster-failure-domain-aggregation.md  0003-provider-deployment-topology.md  0004-single-binary-subcommand-dispatch.md  0005-capi-contract-label-codegen.md  0006-release-and-supply-chain-pipeline.md  0007-admission-policies.md  0008-byoc-vsphere-http-client.md  0009-vim-rs-0.5-rustls-ring-retire-vendoring.md
docs/architecture/calm/: README.md  architecture.json
docs/architecture/calm/templates/mermaid/: flows.md.hbs  system.md.hbs
docs/src/: index.md  overview.md
docs/src/architecture/: flows.md  index.md  system.md
docs/src/concepts/: architecture.md  index.md  infra-crds-capi.md  providers.md  virtualmachine.md
docs/src/developer/: index.md  local-development.md
docs/src/getting-started/: quickstart.md
docs/src/guides/: core-controller.md  index.md  vsphere-provider.md
docs/src/javascripts/: mermaid-init.js
docs/src/reasoning/: abstraction-principle.md  capi-relationship.md  comparisons.md  crd-only-contract.md  index.md  least-touch.md  non-goals.md  problem.md
docs/src/reference/: api.md  license.md  roadmap.md
docs/src/stylesheets/: extra.css
examples/: 01-provider-vsphere-dc1.yaml  02-provider-libvirt-edge.yaml  03-vmclass-db-prod-large.yaml  04-vmimage-ubuntu.yaml  05-virtualmachine.yaml  06-vspherecluster-multi-vcenter.yaml
patches/: README.md  vim_rs.patch
