[workspace]
resolver = "2"
members = [
    "crates/banlieue",
    "crates/banlieue-api",
    "crates/banlieue-controller",
    "crates/banlieue-provider-sdk",
    "crates/banlieue-provider-vsphere",
    "crates/banlieue-vex",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/firestoned/banlieue"
homepage = "https://github.com/firestoned/banlieue"
authors = ["Erick Bourgeois <erick@jeb.ca>"]

[workspace.dependencies]
# Kubernetes — versions match kube-rs/controller-rs (2026-05-19)
kube = { version = "3", features = ["derive", "client", "runtime"] }
k8s-openapi = { version = "0.27", features = ["latest", "schemars"] }
schemars = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Errors
thiserror = "2"
anyhow = "1"

# Async / runtime (used by controller crates in later phases)
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

# Logging / telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Misc
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# vSphere (provider-vsphere only; pinned here so the long compile is cached
# at workspace level and any future provider that needs it gets the same pin).
# `default-features = false` drops the `xml` SOAP/ESXi transport — vCenter
# uses JSON, vcsim supports it, and the XML transport adds ~30–40% to debug
# compile time. Vendor noclue/vim_rs, Apache-2.0.
#
# Pinned to `=0.4.4` (exact) to match VIM_RS_REF in the Makefile. 0.4.4 is the
# first release to carry the `vcsim_compat` feature the provider uses; it was
# published to crates.io and lives on `main` but was never git-tagged, so the
# Makefile pins the commit, not a tag. The exact pin forces resolution onto that
# version so [patch.crates-io] below actually takes effect (a non-exact `0.4`
# would let cargo pick any 0.4.x and silently ignore the patch). Bump this in
# lockstep with VIM_RS_REF when a newer commit carrying our upstreamed fix lands.
vim_rs = { version = "=0.4.4", default-features = false }

# Build vim_rs from a vendored checkout of noclue/vim_rs carrying a local patch
# (patches/vim_rs.patch). The upstream repo is a multi-crate workspace, so the
# crate itself lives in the `vim_rs/` subdirectory of the clone. The version
# requirement and features stay declared above in [workspace.dependencies]; this
# only redirects the *source*. The patch is being submitted upstream — once it
# ships in a released tag, drop this block and bump the version above.
#
# Run `make vendor-vim-rs` before building (it clones/pins the tag and applies
# the patch idempotently). `make build`/`test`/`lint`/`crds` depend on it.
[patch.crates-io]
vim_rs = { path = "third_party/vim_rs/vim_rs" }

[profile.release]
lto = "thin"
codegen-units = 1
