[workspace]
resolver = "2"
members = [
    "crates/banlieue",
    "crates/banlieue-api",
    "crates/banlieue-controller",
    "crates/banlieue-provider-sdk",
    "crates/banlieue-provider-vsphere",
    "crates/banlieue-vex",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/firestoned/banlieue"
homepage = "https://github.com/firestoned/banlieue"
authors = ["Erick Bourgeois <erick@jeb.ca>"]

[workspace.dependencies]
# Kubernetes — versions match kube-rs/controller-rs (2026-05-19)
kube = { version = "3", features = ["derive", "client", "runtime"] }
k8s-openapi = { version = "0.27", features = ["latest", "schemars"] }
schemars = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Errors
thiserror = "2"
anyhow = "1"

# Async / runtime (used by controller crates in later phases)
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

# Logging / telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Misc
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# vSphere (provider-vsphere only; pinned here so the long compile is cached at
# workspace level and any future provider that needs it gets the same pin).
# `default-features = false` turns OFF vim_rs's `default-client` feature so we use
# it in Bring-Your-Own-Client mode (ADR-0008/0009): banlieue supplies the
# reqwest::Client and vim_rs never builds one (so `reqwest/default` is never
# pulled in). vim_rs 0.5 is plain crates.io — the old 0.4.x vendor/patch pipeline
# that flipped reqwest to rustls is gone (noclue/vim_rs#37 shipped in 0.5).
vim_rs = { version = "0.5", default-features = false }

# reqwest — direct dep of provider-vsphere for the BYOC HTTP client (ADR-0008):
# banlieue builds the reqwest::Client (CA bundle, insecure flag) and injects it
# into vim_rs. Must track vim_rs 0.5's reqwest major (0.13) so the injected
# Client type matches. `rustls-no-provider` links rustls WITHOUT a crypto
# provider; we install `ring` as the process default at startup (ADR-0009),
# sharing the single ring provider kube already uses (no aws-lc-rs, no OpenSSL).
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "charset", "http2"] }

# rustls — direct dep so the binary can install the ring CryptoProvider as the
# process default before any TLS use (reqwest's `rustls-no-provider` panics with
# "No provider set" otherwise). Version tracks the one kube/hyper-rustls resolve.
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[profile.release]
lto = "thin"
codegen-units = 1
