[package]
name = "banlieue-controller"
description = "Main banlieue controller — watches VirtualMachine CRs and reconciles them onto provider infrastructure CRs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

# Library only: the unified `banlieue` binary (crates/banlieue) drives this via
# `banlieue_controller::run` for the `controller` subcommand (ADR-0004).

[dependencies]
banlieue-api = { path = "../banlieue-api" }
banlieue-provider-sdk = { path = "../banlieue-provider-sdk" }

kube.workspace = true
k8s-openapi.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

thiserror.workspace = true
anyhow.workspace = true

# `macros` backs `tokio::select!`; `rt-multi-thread` backs `tokio::spawn`. The
# health server / shutdown signal (net/io-util/signal) now live in the SDK's
# `bootstrap` module, so they are no longer needed here.
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures.workspace = true

tracing.workspace = true

clap.workspace = true
chrono.workspace = true
async-trait.workspace = true
